fix: input with the wrong color in dark mode/autofill

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -142,8 +142,8 @@ input:-webkit-autofill:active {
   -webkit-box-shadow: 0 0 0 30px rgba(46, 209, 128, 0.25) inset !important;
 }
 .dark input:-webkit-autofill,
-input:-webkit-autofill:hover,
-input:-webkit-autofill:focus,
-input:-webkit-autofill:active {
+.dark input:-webkit-autofill:hover,
+.dark input:-webkit-autofill:focus,
+.dark input:-webkit-autofill:active {
   -webkit-box-shadow: 0 0 0 30px rgb(42, 75, 58) inset !important;
 }
